tests/NormalTests/paczka1/fuzzy1/86262252.err
Error in line 4: smCMqCtbjhv A316 46,2
Error in line 13: s33OFtSc S776 11,8
Error in line 15: S540 A316 22,9
Error in line 24: s33OFtSc S>40 10>,8
Error in line 32: Egu2 S776 48,1
